--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pla-sim-ui",
   "version": "1.0.0",
   "private": true,
-  "description": "```bash # requirements.txt # Include all necessary modern libraries for the AI, GPU, and CV pipelines",
+  "description": "PLA Advanced Simulation UI built with modern React tooling",
   "homepage": "https://github.com/pokimane-viewer/Bo_PLA_Advanced_Graphics_Engine_Fullstack#readme",
   "bugs": {
     "url": "https://github.com/pokimane-viewer/Bo_PLA_Advanced_Graphics_Engine_Fullstack/issues"
@@ -12,25 +12,23 @@
     "url": "git+https://github.com/pokimane-viewer/Bo_PLA_Advanced_Graphics_Engine_Fullstack.git"
   },
   "license": "ISC",
-  "author": "",
-  "type": "commonjs",
-  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.5",
+    "@react-three/fiber": "^8.15.13",
+    "@reduxjs/toolkit": "^2.1.0",
     "d3": "^7.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5",
-    "react-scripts": "^5.0.1",
-    "react-trees": "^0.1.1",
-    "reactdom": "^2.0.0",
-    "three": "^0.152.2"
+    "react-redux": "^8.1.3",
+    "three": "^0.159.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^6.3.5"
   },
   "browserslist": {
     "production": [
